--- a/docs/components/breadcrumb.html
+++ b/docs/components/breadcrumb.html
@@ -1,6 +1,6 @@
 <div>
   <h1>Breadcrumb</h1>
-  <p>Breadcrumbs show the current page's location within a navigational hierarchy and allow users to navigate to parent pages.</p>
+  <p>Breadcrumbs show the current page's location within a navigational hierarchy.</p>
 </div>
 
 <div>
@@ -20,7 +20,7 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-breadcrumb>
           <ol>
             <li><a href="#">Home</a></li>
@@ -30,10 +30,7 @@
           </ol>
         </ui-breadcrumb>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-breadcrumb&gt;
