--- a/docs/components/field.html
+++ b/docs/components/field.html
@@ -20,7 +20,7 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-field>
           <label>Label</label>
           <ui-checkbox></ui-checkbox>
@@ -30,10 +30,7 @@
           <label>Label</label>
         </ui-field>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-field&gt;
@@ -54,7 +51,7 @@
   <div class="content-item">
     <div>Label pposition</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-field>
           <label>Label</label>
           <ui-switch></ui-switch>
@@ -64,10 +61,7 @@
           <label>Label</label>
         </ui-field>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-field label-position="end"&gt;
@@ -83,16 +77,13 @@
   <div class="content-item">
     <div>Passive, non-clickable div</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-field passive>
           <label>Label</label>
           <ui-switch></ui-switch>
         </ui-field>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-field passive&gt;
@@ -108,16 +99,13 @@
   <div class="content-item">
     <div>Required, vertical</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-field required vertical>
           <label>Label</label>
           <ui-textarea height="200"></ui-textarea>
         </ui-field>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-field required vertical&gt;
