--- a/docs/components/input.html
+++ b/docs/components/input.html
@@ -28,15 +28,12 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-input>
           <input />
         </ui-input>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-input&gt;
@@ -51,7 +48,7 @@
   <div class="content-item">
     <div>Shape (default: rounded)</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-input shape="rounded">
           <input />
         </ui-input>
@@ -62,10 +59,7 @@
           <input />
         </ui-input>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-input shape="rounded"&gt;
@@ -88,15 +82,12 @@
   <div class="content-item">
     <div>Clear button</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-input clearable>
           <input />
         </ui-input>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-input clearable&gt;
@@ -111,15 +102,12 @@
   <div class="content-item">
     <div>Required</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-input>
           <input required />
         </ui-input>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-input&gt;
@@ -134,15 +122,12 @@
   <div class="content-item">
     <div>Placeholder</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-input>
           <input placeholder="Placeholder" />
         </ui-input>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-input&gt;
@@ -157,15 +142,12 @@
   <div class="content-item">
     <div>Disabled + Placeholder</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-input>
           <input placeholder="Disabled" disabled />
         </ui-input>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-input&gt;
