--- a/docs/components/select.html
+++ b/docs/components/select.html
@@ -24,13 +24,10 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-select id="select00"></ui-select>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-select&gt;&lt;/ui-select&gt;
@@ -43,15 +40,12 @@
   <div class="content-item">
     <div>Shape</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-select shape="rounded"></ui-select>
         <ui-select shape="square"></ui-select>
         <ui-select shape="pill"></ui-select>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-select&gt;&lt;/ui-select&gt;
@@ -64,13 +58,10 @@
   <div class="content-item">
     <div>With Placeholder and Disabled option</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-select placeholder="Select" id="select01"></ui-select>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-select placeholder="Select"&gt;&lt;/ui-select&gt;
@@ -83,13 +74,10 @@
   <div class="content-item">
     <div>Disabled</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-select disabled></ui-select>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-select disabled&gt;&lt;/ui-select&gt;
