--- a/docs/components/accordion.html
+++ b/docs/components/accordion.html
@@ -33,14 +33,12 @@
   <div class="content-item">
     <div>Multiplie</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-accordion>
 
           <ui-accordion-item expanded>
             <h3>
-              <button>
-                What is Lorem? (expanded)
-              </button>
+              <ui-button>What is Lorem? (expanded)</ui-button>
             </h3>
 
             <div>
@@ -50,9 +48,7 @@
 
           <ui-accordion-item>
             <h3>
-              <button>
-                What is Lorem?
-              </button>
+              <ui-button>What is Lorem?</ui-button>
             </h3>
 
             <div>
@@ -62,10 +58,10 @@
 
           <ui-accordion-item>
             <h3>
-              <button>
+              <ui-button>
                 <ui-icon name="light-mode"></ui-icon>
                 What is Lorem?
-              </button>
+              </ui-button>
             </h3>
 
             <div>
@@ -75,18 +71,13 @@
 
         </ui-accordion>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-accordion&gt;
   &lt;ui-accordion-item expanded&gt;
     &lt;h3&gt;
-      &lt;button&gt;
-        What is Lorem?
-      &lt;/button&gt;
+      &lt;ui-button&gt;What is Lorem?&lt;/ui-button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -96,9 +87,7 @@
 
   &lt;ui-accordion-item&gt;
     &lt;h3&gt;
-      &lt;button&gt;
-        What is Lorem?
-      &lt;/button&gt;
+      &lt;ui-button&gt;What is Lorem?&lt;/ui-button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -108,10 +97,10 @@
 
   &lt;ui-accordion-item&gt;
     &lt;h3&gt;
-      &lt;button&gt;
+      &lt;ui-button&gt;
         &lt;ui-icon name="light-mode"&gt;&lt;/ui-icon&gt;
         What is Lorem?
-      &lt;/button&gt;
+      &lt;/ui-button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -128,14 +117,12 @@
   <div class="content-item">
     <div>Single mode with a disabled item</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-accordion single>
 
           <ui-accordion-item expanded>
             <h3>
-              <button>
-                What is Lorem? (expanded)
-              </button>
+              <ui-button>What is Lorem? (expanded)</ui-button>
             </h3>
 
             <div>
@@ -145,9 +132,7 @@
 
           <ui-accordion-item disabled>
             <h3>
-              <button>
-                What is Lorem? (disabled)
-              </button>
+              <ui-button>What is Lorem? (disabled)</ui-button>
             </h3>
 
             <div>
@@ -157,10 +142,10 @@
 
           <ui-accordion-item>
             <h3>
-              <button>
+              <ui-button>
                 <ui-icon name="light-mode"></ui-icon>
                 What is Lorem?
-              </button>
+              </ui-button>
             </h3>
 
             <div>
@@ -170,18 +155,13 @@
 
         </ui-accordion>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-accordion single&gt;
   &lt;ui-accordion-item expanded&gt;
     &lt;h3&gt;
-      &lt;button&gt;
-        What is Lorem?
-      &lt;/button&gt;
+      &lt;ui-button&gt;What is Lorem?&lt;/ui-button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -191,9 +171,7 @@
 
   &lt;ui-accordion-item disabled&gt;
     &lt;h3&gt;
-      &lt;button&gt;
-        What is Lorem? (disabled)
-      &lt;/button&gt;
+      &lt;ui-button&gt;What is Lorem? (disabled)&lt;/ui-button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -203,10 +181,10 @@
 
   &lt;ui-accordion-item&gt;
     &lt;h3&gt;
-      &lt;button&gt;
+      &lt;ui-button&gt;
         &lt;ui-icon name="light-mode"&gt;&lt;/ui-icon&gt;
         What is Lorem?
-      &lt;/button&gt;
+      &lt;/ui-button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
