--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -28,15 +28,12 @@
   <div class="content-item">
     <div>Alert with description (no close button)</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-alert>
           <div>Your settings have been successfully saved.</div>
         </ui-alert>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-alert non-closable&gt;
@@ -51,16 +48,13 @@
   <div class="content-item">
     <div>Alert with label and description</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-alert>
           <h3>Update Complete</h3>
           <div>Your settings have been successfully saved.</div>
         </ui-alert>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-alert&gt;
@@ -76,17 +70,14 @@
   <div class="content-item">
     <div>Alert with label, description, and icon</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-alert>
           <ui-icon name="info"></ui-icon>
           <h3>Update Complete</h3>
           <div>Your settings have been successfully saved.</div>
         </ui-alert>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-alert&gt;
