--- a/docs/components/icon.html
+++ b/docs/components/icon.html
@@ -17,16 +17,11 @@
   <div class="content-item">
     <div>Icon</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-icon name="home" id="example-icon"></ui-icon>
-        <ui-button onclick="changeIconName()">
-          <button>Reactivity Test</button>
-        </ui-button>
+        <ui-button onclick="changeIconName()">Reactivity</ui-button>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-icon name="home"&gt;&lt;/ui-icon&gt;
