--- a/docs/components/portal.html
+++ b/docs/components/portal.html
@@ -5,7 +5,7 @@
 
 <div>
   <h2>Info</h2>
-  <p>Place just before the closing &lt;/body&gt; tag.</p>
+  <p>Place just before the closing <code>&lt;/ui-root&gt;</code> tag.</p>
   <p>Avoids z-index conflicts, and guarantees that modals, overlays, and dialogs render above all other content.</p>
 </div>
 
@@ -13,15 +13,15 @@
   <div class="content-item">
     <div>Placement</div>
     <div class="example">
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;body&gt;
-  &lt;!-- Preceding code --&gt;
-  &lt;ui-portal&gt;&lt;/ui-portal&gt;
+  &lt;ui-root&gt;
+    &lt;ui-focus&gt;&lt;/ui-focus&gt;
+    &lt;ui-app&gt;&lt;/ui-app&gt;
+    &lt;ui-portal&gt;&lt;/ui-portal&gt;
+  &lt;/ui-root&gt;
 &lt;/body&gt;
 </code></pre>
 
