--- a/docs/components/spinner.html
+++ b/docs/components/spinner.html
@@ -19,13 +19,10 @@
 
   <div class="content-item">
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-spinner></ui-spinner>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-spinner&gt;&lt;/ui-spinner&gt;
