--- a/docs/components/switch.html
+++ b/docs/components/switch.html
@@ -16,13 +16,10 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-switch id="a"></ui-switch>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-switch&gt;&lt;/ui-switch&gt;
@@ -35,13 +32,10 @@
   <div class="content-item">
     <div>Checked</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-switch checked></ui-switch>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-switch checked&gt;&lt;/ui-switch&gt;
@@ -54,13 +48,10 @@
   <div class="content-item">
     <div>Disabled</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-switch disabled></ui-switch>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-switch disabled&gt;&lt;/ui-switch&gt;
