--- a/docs/components/tabs.html
+++ b/docs/components/tabs.html
@@ -22,7 +22,7 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-tabs>
           <div>
             <button>What is this?</button>
@@ -48,10 +48,7 @@
           </div>
         </ui-tabs>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-tabs&gt;
@@ -87,7 +84,7 @@
   <div class="content-item">
     <div>Vertical</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-tabs orientation="vertical">
           <div>
             <button>What is this?</button>
@@ -113,10 +110,7 @@
           </div>
         </ui-tabs>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
+      <div class="example-code">
 
 <pre><code>
 &lt;ui-tabs orientation="vertical"&gt;
