--- a/docs/components/textarea.html
+++ b/docs/components/textarea.html
@@ -15,20 +15,15 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-textarea>
           <textarea></textarea>
         </ui-textarea>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
+      <div class="example-code">
 <pre><code>
 &lt;ui-textarea&gt;&lt;/ui-textarea&gt;
 </code></pre>
-
       </div>
     </div>
   </div>
@@ -36,7 +31,7 @@
   <div class="content-item">
     <div>Shape</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-textarea>
           <textarea></textarea>
         </ui-textarea>
@@ -44,17 +39,12 @@
           <textarea></textarea>
         </ui-textarea>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
+      <div class="example-code">
 <pre><code>
 &lt;ui-textarea&gt;&lt;/ui-textarea&gt;
 
 &lt;ui-textarea shape="square"&gt;&lt;/ui-textarea&gt;
 </code></pre>
-
       </div>
     </div>
   </div>
@@ -62,20 +52,15 @@
   <div class="content-item">
     <div>Required</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-textarea>
           <textarea required></textarea>
         </ui-textarea>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
+      <div class="example-code">
 <pre><code>
 &lt;ui-textarea required&gt;&lt;/ui-textarea&gt;
 </code></pre>
-
       </div>
     </div>
   </div>
@@ -83,20 +68,15 @@
   <div class="content-item">
     <div>Placeholder</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-textarea>
           <textarea placeholder="Placeholder"></textarea>
         </ui-textarea>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
+      <div class="example-code">
 <pre><code>
 &lt;ui-textarea placeholder="Placeholder"&gt;&lt;/ui-textarea&gt;
 </code></pre>
-
       </div>
     </div>
   </div>
@@ -104,22 +84,17 @@
   <div class="content-item">
     <div>Disabled + Placeholder</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-textarea>
           <textarea placeholder="Disabled" disabled></textarea>
         </ui-textarea>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
+      <div class="example-code">
 <pre><code>
 &lt;ui-textarea placeholder="Disabled"&gt;
   &lt;textarea disabled&gt;&lt;/textarea&gt;
 &lt;/ui-textarea&gt;
 </code></pre>
-
       </div>
     </div>
   </div>
@@ -127,22 +102,17 @@
   <div class="content-item">
     <div>Disabled + Value</div>
     <div class="example">
-      <div class="preview">
+      <div class="example-preview">
         <ui-textarea>
           <textarea disabled>Disabled</textarea>
         </ui-textarea>
       </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
+      <div class="example-code">
 <pre><code>
 &lt;ui-textarea&gt;
   &lt;textarea disabled&gt;Disabled&lt;/textarea&gt;
 &lt;/ui-textarea&gt;
 </code></pre>
-
       </div>
     </div>
   </div>
